tests/NormalTests/paczka1/small_fuzzy/11325057.err
Error in line 2: 2qa S777 88,6
Error in line 4: 2qa A529 74,7
Error in line 3: 3mTJ A363 74,7
